Bindings/NIFToolset.Native/NIF.Native.Animation.h

NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_ReloadKFFile(NIF_ActorManagerHandle actorManager, const char* filename);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_ChangeNIFRoot(NIF_ActorManagerHandle actorManager, NIF_AVObjectHandle nifRoot);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_LoadSequenceData(NIF_ActorManagerHandle actorManager, unsigned int sequenceId, int loadKfFile);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_LoadAllSequenceData(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_UnloadSequenceData(NIF_ActorManagerHandle actorManager, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_Update(NIF_ActorManagerHandle actorManager, float time);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_ActorManager_GetLastUpdateTime(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_ActorManager_GetTargetAnimation(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_SetTargetAnimation(NIF_ActorManagerHandle actorManager, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_Reset(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_ActorManager_GetCurrentAnimation(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_GetTransitionState(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_ActorManager_GetNextAnimation(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_IsPaused(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_SetPaused(NIF_ActorManagerHandle actorManager, int paused);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_RefreshControllerManager(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY NIF_ActorManagerHandle NIF_Animation_ActorManager_Clone(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY NIF_ActorManagerHandle NIF_Animation_ActorManager_CloneOnlyAnimation(NIF_ActorManagerHandle actorManager, NIF_AVObjectHandle avObject, int cumulativeAnimations);
NIFTOOLSET_NATIVE_ENTRY NIF_KFMToolHandle NIF_Animation_ActorManager_GetKFMTool(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY NIF_AVObjectHandle NIF_Animation_ActorManager_GetNIFRoot(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY NIF_AVObjectHandle NIF_Animation_ActorManager_GetActorRoot(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY NIF_AVObjectHandle NIF_Animation_ActorManager_GetAccumRoot(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_ActorManager_FindSequenceId(NIF_ActorManagerHandle actorManager, const char* sequenceName);
NIFTOOLSET_NATIVE_ENTRY NIF_ObjectHandle NIF_Animation_ActorManager_GetSequenceData(NIF_ActorManagerHandle actorManager, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY NIF_ControllerSequenceHandle NIF_Animation_ActorManager_GetActiveSequence(NIF_ActorManagerHandle actorManager, unsigned int sequenceId, int checkExtraSequences, int checkStateSequences);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_ActorManager_GetSequenceId(NIF_ActorManagerHandle actorManager, NIF_ControllerSequenceHandle sequence, int checkExtraSequences, int checkStateSequences);
NIFTOOLSET_NATIVE_ENTRY NIF_ControllerSequenceHandle NIF_Animation_ActorManager_ActivateSequence(NIF_ActorManagerHandle actorManager, unsigned int sequenceId, int priority, float weight, float easeInTime, unsigned int timeSyncSequenceId, float frequency, float startFrame, int additiveBlend, float additiveRefFrame);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_DeactivateSequence(NIF_ActorManagerHandle actorManager, unsigned int sequenceId, float easeOutTime);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_RegisterTextKeyCallback(NIF_ActorManagerHandle actorManager, int eventType, unsigned int sequenceId, const char* textKey);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_UnregisterTextKeyCallback(NIF_ActorManagerHandle actorManager, int eventType, unsigned int sequenceId, const char* textKey);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_RegisterCallback(NIF_ActorManagerHandle actorManager, int eventType, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_UnregisterCallback(NIF_ActorManagerHandle actorManager, int eventType, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_ClearAllRegisteredCallbacks(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_ActorManager_GetNextTextKeyEventTime(NIF_ActorManagerHandle actorManager, unsigned int sequenceId, const char* textKey);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_ActorManager_GetNextEndOfSequenceTime(NIF_ActorManagerHandle actorManager, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_GetStartTextKey(void);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_GetEndTextKey(void);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_GetMorphTextKey(void);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_SequenceData_Destroy(NIF_SequenceDataHandle sequenceData);
NIFTOOLSET_NATIVE_ENTRY NIF_SequenceDataHandle NIF_Animation_SequenceData_CreateFromFileByName(const char* filename, const char* sequenceName);
NIFTOOLSET_NATIVE_ENTRY NIF_SequenceDataHandle NIF_Animation_SequenceData_CreateFromFileByIndex(const char* filename, unsigned int index);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_SequenceData_GetName(NIF_SequenceDataHandle sequenceData);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_SequenceData_SetName(NIF_SequenceDataHandle sequenceData, const char* name);
NIFTOOLSET_NATIVE_ENTRY NIF_TextKeyExtraDataHandle NIF_Animation_SequenceData_GetTextKeys(NIF_SequenceDataHandle sequenceData);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_SequenceData_SetTextKeys(NIF_SequenceDataHandle sequenceData, NIF_TextKeyExtraDataHandle textKeys);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_SequenceData_GetEvaluatorCount(NIF_SequenceDataHandle sequenceData);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_SequenceData_GetKeyTime(NIF_SequenceDataHandle sequenceData, const char* textKey);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_SequenceData_TimeDivFreq(NIF_SequenceDataHandle sequenceData, float time);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_SequenceData_TimeMultFreq(NIF_SequenceDataHandle sequenceData, float time);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_SequenceData_GetDuration(NIF_SequenceDataHandle sequenceData);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_SequenceData_GetDurationDivFreq(NIF_SequenceDataHandle sequenceData);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_SequenceData_SetDuration(NIF_SequenceDataHandle sequenceData, float duration);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_SequenceData_GetCycleType(NIF_SequenceDataHandle sequenceData);