Bindings/NIFToolset.Managed/NativeMethods.cs

    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_ReloadKFFile(SafeActorManagerHandle actorManager, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_ChangeNIFRoot(SafeActorManagerHandle actorManager, SafeAVObjectHandle nifRoot);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_LoadSequenceData(SafeActorManagerHandle actorManager, uint sequenceId, int loadKfFile);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_LoadAllSequenceData(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_ActorManager_UnloadSequenceData(SafeActorManagerHandle actorManager, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_ActorManager_Update(SafeActorManagerHandle actorManager, float time);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_ActorManager_GetLastUpdateTime(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_ActorManager_GetTargetAnimation(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_SetTargetAnimation(SafeActorManagerHandle actorManager, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_ActorManager_Reset(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_ActorManager_GetCurrentAnimation(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_GetTransitionState(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_ActorManager_GetNextAnimation(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_IsPaused(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_ActorManager_SetPaused(SafeActorManagerHandle actorManager, int paused);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_ActorManager_RefreshControllerManager(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeActorManagerHandle NIF_Animation_ActorManager_Clone(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeActorManagerHandle NIF_Animation_ActorManager_CloneOnlyAnimation(SafeActorManagerHandle actorManager, SafeAVObjectHandle avObject, int cumulativeAnimations);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeKfmToolHandle NIF_Animation_ActorManager_GetKFMTool(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeAVObjectHandle NIF_Animation_ActorManager_GetNIFRoot(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeAVObjectHandle NIF_Animation_ActorManager_GetActorRoot(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeAVObjectHandle NIF_Animation_ActorManager_GetAccumRoot(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_ActorManager_FindSequenceId(SafeActorManagerHandle actorManager, [MarshalAs(UnmanagedType.LPUTF8Str)] string? sequenceName);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeObjectHandle NIF_Animation_ActorManager_GetSequenceData(SafeActorManagerHandle actorManager, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeControllerSequenceHandle NIF_Animation_ActorManager_GetActiveSequence(SafeActorManagerHandle actorManager, uint sequenceId, int checkExtraSequences, int checkStateSequences);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_ActorManager_GetSequenceId(SafeActorManagerHandle actorManager, SafeControllerSequenceHandle sequence, int checkExtraSequences, int checkStateSequences);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeControllerSequenceHandle NIF_Animation_ActorManager_ActivateSequence(SafeActorManagerHandle actorManager, uint sequenceId, int priority, float weight, float easeInTime, uint timeSyncSequenceId, float frequency, float startFrame, int additiveBlend, float additiveRefFrame);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_DeactivateSequence(SafeActorManagerHandle actorManager, uint sequenceId, float easeOutTime);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_RegisterTextKeyCallback(SafeActorManagerHandle actorManager, int eventType, uint sequenceId, [MarshalAs(UnmanagedType.LPUTF8Str)] string? textKey);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_ActorManager_UnregisterTextKeyCallback(SafeActorManagerHandle actorManager, int eventType, uint sequenceId, [MarshalAs(UnmanagedType.LPUTF8Str)] string? textKey);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_RegisterCallback(SafeActorManagerHandle actorManager, int eventType, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_ActorManager_UnregisterCallback(SafeActorManagerHandle actorManager, int eventType, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_ActorManager_ClearAllRegisteredCallbacks(SafeActorManagerHandle actorManager);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_ActorManager_GetNextTextKeyEventTime(SafeActorManagerHandle actorManager, uint sequenceId, [MarshalAs(UnmanagedType.LPUTF8Str)] string? textKey);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_ActorManager_GetNextEndOfSequenceTime(SafeActorManagerHandle actorManager, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_GetStartTextKey();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_GetEndTextKey();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_GetMorphTextKey();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_Animation_SequenceData_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeSequenceDataHandle NIF_Animation_SequenceData_CreateFromFileByName([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, [MarshalAs(UnmanagedType.LPUTF8Str)] string? sequenceName);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeSequenceDataHandle NIF_Animation_SequenceData_CreateFromFileByIndex([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, uint index);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_SequenceData_GetName(SafeSequenceDataHandle sequenceData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_SequenceData_SetName(SafeSequenceDataHandle sequenceData, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeTextKeyExtraDataHandle NIF_Animation_SequenceData_GetTextKeys(SafeSequenceDataHandle sequenceData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_SequenceData_SetTextKeys(SafeSequenceDataHandle sequenceData, SafeTextKeyExtraDataHandle textKeys);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_SequenceData_GetEvaluatorCount(SafeSequenceDataHandle sequenceData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_SequenceData_GetKeyTime(SafeSequenceDataHandle sequenceData, [MarshalAs(UnmanagedType.LPUTF8Str)] string? textKey);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_SequenceData_TimeDivFreq(SafeSequenceDataHandle sequenceData, float time);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_SequenceData_TimeMultFreq(SafeSequenceDataHandle sequenceData, float time);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_SequenceData_GetDuration(SafeSequenceDataHandle sequenceData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_SequenceData_GetDurationDivFreq(SafeSequenceDataHandle sequenceData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_SequenceData_SetDuration(SafeSequenceDataHandle sequenceData, float duration);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_SequenceData_GetCycleType(SafeSequenceDataHandle sequenceData);
